[package]
name = "veriwavex-beta"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.24" # The simplest way to run an egui app
egui_code_editor = "0.2" # Text editor widget with highlighting
rfd = "0.12" # Native file dialogs (Open/Save)
regex = "1.10" # For extracting ports to generate UUT
